projects/kotlin-util/1.0/docs/it.czerwinski.kotlin.util/-failure/index.md
---
title: Failure - Kotlin utility classes based on Scala
---

[Kotlin utility classes based on Scala](../../index.html) / [it.czerwinski.kotlin.util](../index.html) / [Failure](./index.html)

# Failure

`data class Failure : `[`Try`](../-try/index.html)`<`[`Nothing`](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-nothing/index.html)`>`

### Constructors

| [&lt;init&gt;](-init-.html) | `Failure(exception: `[`Throwable`](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-throwable/index.html)`)` |

### Properties

| [exception](exception.html) | `val exception: `[`Throwable`](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-throwable/index.html) |
| [failed](failed.html) | `val failed: `[`Try`](../-try/index.html)`<`[`Throwable`](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-throwable/index.html)`>`<br>Returns a [Success](../-success/index.html) with an exception it this is a [Failure](./index.html) or a [Failure](./index.html) if this is a [Success](../-success/index.html). |
| [isFailure](is-failure.html) | `val isFailure: `[`Boolean`](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-boolean/index.html)<br>Returns `true` if this is a [Failure](./index.html) or `false` if this is [Success](../-success/index.html). |
| [isSuccess](is-success.html) | `val isSuccess: `[`Boolean`](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-boolean/index.html)<br>Returns `true` if this is a [Success](../-success/index.html) or `false` if this is [Failure](./index.html). |

### Functions

| [filter](filter.html) | `fun filter(predicate: (`[`Nothing`](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-nothing/index.html)`) -> `[`Boolean`](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-boolean/index.html)`): `[`Try`](../-try/index.html)`<`[`Nothing`](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-nothing/index.html)`>`<br>Returns the same [Success](../-success/index.html) if the [predicate](../-try/filter.html#it.czerwinski.kotlin.util.Try$filter(kotlin.Function1((it.czerwinski.kotlin.util.Try.T, kotlin.Boolean)))/predicate) is satisfied for the value. Otherwise returns a [Failure](./index.html). |
| [filterNot](filter-not.html) | `fun filterNot(predicate: (`[`Nothing`](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-nothing/index.html)`) -> `[`Boolean`](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-boolean/index.html)`): `[`Try`](../-try/index.html)`<`[`Nothing`](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-nothing/index.html)`>`<br>Returns the same [Success](../-success/index.html) if the [predicate](../-try/filter-not.html#it.czerwinski.kotlin.util.Try$filterNot(kotlin.Function1((it.czerwinski.kotlin.util.Try.T, kotlin.Boolean)))/predicate) is not satisfied for the value. Otherwise returns a [Failure](./index.html). |
| [flatMap](flat-map.html) | `fun <R> flatMap(transform: (`[`Nothing`](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-nothing/index.html)`) -> `[`Try`](../-try/index.html)`<`[`R`](flat-map.html#R)`>): `[`Try`](../-try/index.html)`<`[`R`](flat-map.html#R)`>`<br>Maps value of a [Success](../-success/index.html) to a new [Try](../-try/index.html) using [transform](../-try/flat-map.html#it.czerwinski.kotlin.util.Try$flatMap(kotlin.Function1((it.czerwinski.kotlin.util.Try.T, it.czerwinski.kotlin.util.Try((it.czerwinski.kotlin.util.Try.flatMap.R)))))/transform) or returns the same [Try](../-try/index.html) if this is a [Failure](./index.html). |
| [forEach](for-each.html) | `fun forEach(action: (`[`Nothing`](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-nothing/index.html)`) -> `[`Unit`](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-unit/index.html)`): `[`Unit`](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-unit/index.html)<br>Runs [action](../-try/for-each.html#it.czerwinski.kotlin.util.Try$forEach(kotlin.Function1((it.czerwinski.kotlin.util.Try.T, kotlin.Unit)))/action) if this is a [Success](../-success/index.html). Returns [Unit](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-unit/index.html) without any action if this is a [Failure](./index.html). |
| [get](get.html) | `fun get(): `[`Nothing`](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-nothing/index.html)<br>Gets the value of a [Success](../-success/index.html) or throw an exception from a [Failure](./index.html). |
| [getOrNull](get-or-null.html) | `fun getOrNull(): `[`Nothing`](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-nothing/index.html)`?`<br>Gets the value of a [Success](../-success/index.html) or `null` if this is a [Failure](./index.html). |
| [map](map.html) | `fun <R> map(transform: (`[`Nothing`](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-nothing/index.html)`) -> `[`R`](map.html#R)`): `[`Try`](../-try/index.html)`<`[`R`](map.html#R)`>`<br>Maps value of a [Success](../-success/index.html) using [transform](../-try/map.html#it.czerwinski.kotlin.util.Try$map(kotlin.Function1((it.czerwinski.kotlin.util.Try.T, it.czerwinski.kotlin.util.Try.map.R)))/transform) or returns the same [Try](../-try/index.html) if this is a [Failure](./index.html). |
| [toEither](to-either.html) | `fun toEither(): `[`Either`](../-either/index.html)`<`[`Throwable`](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-throwable/index.html)`, `[`Nothing`](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-nothing/index.html)`>`<br>Converts this [Try](../-try/index.html) to [Either](../-either/index.html). |
| [toOption](to-option.html) | `fun toOption(): `[`Option`](../-option/index.html)`<`[`Nothing`](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-nothing/index.html)`>`<br>Converts this [Try](../-try/index.html) to [Option](../-option/index.html). |

### Inherited Functions

| [filterIsInstance](../-try/filter-is-instance.html) | `fun <R> filterIsInstance(): `[`Try`](../-try/index.html)`<`[`R`](../-try/filter-is-instance.html#R)`>`<br>Returns the same [Success](../-success/index.html) casted to type [R](../-try/filter-is-instance.html#R) if it is [R](../-try/filter-is-instance.html#R). Otherwise returns a [Failure](./index.html). |
| [fold](../-try/fold.html) | `fun <R> fold(successTransform: (`[`T`](../-try/index.html#T)`) -> `[`R`](../-try/fold.html#R)`, failureTransform: (`[`Throwable`](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-throwable/index.html)`) -> `[`R`](../-try/fold.html#R)`): `[`R`](../-try/fold.html#R)<br>Transforms a [Success](../-success/index.html) using [successTransform](../-try/fold.html#it.czerwinski.kotlin.util.Try$fold(kotlin.Function1((it.czerwinski.kotlin.util.Try.T, it.czerwinski.kotlin.util.Try.fold.R)), kotlin.Function1((kotlin.Throwable, it.czerwinski.kotlin.util.Try.fold.R)))/successTransform) or a [Failure](./index.html) using [failureTransform](../-try/fold.html#it.czerwinski.kotlin.util.Try$fold(kotlin.Function1((it.czerwinski.kotlin.util.Try.T, it.czerwinski.kotlin.util.Try.fold.R)), kotlin.Function1((kotlin.Throwable, it.czerwinski.kotlin.util.Try.fold.R)))/failureTransform). |
| [transform](../-try/transform.html) | `fun <R> transform(successTransform: (`[`T`](../-try/index.html#T)`) -> `[`Try`](../-try/index.html)`<`[`R`](../-try/transform.html#R)`>, failureTransform: (`[`Throwable`](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-throwable/index.html)`) -> `[`Try`](../-try/index.html)`<`[`R`](../-try/transform.html#R)`>): `[`Try`](../-try/index.html)`<`[`R`](../-try/transform.html#R)`>`<br>Transforms a [Success](../-success/index.html) using [successTransform](../-try/transform.html#it.czerwinski.kotlin.util.Try$transform(kotlin.Function1((it.czerwinski.kotlin.util.Try.T, it.czerwinski.kotlin.util.Try((it.czerwinski.kotlin.util.Try.transform.R)))), kotlin.Function1((kotlin.Throwable, it.czerwinski.kotlin.util.Try((it.czerwinski.kotlin.util.Try.transform.R)))))/successTransform) or a [Failure](./index.html) using [failureTransform](../-try/transform.html#it.czerwinski.kotlin.util.Try$transform(kotlin.Function1((it.czerwinski.kotlin.util.Try.T, it.czerwinski.kotlin.util.Try((it.czerwinski.kotlin.util.Try.transform.R)))), kotlin.Function1((kotlin.Throwable, it.czerwinski.kotlin.util.Try((it.czerwinski.kotlin.util.Try.transform.R)))))/failureTransform). |

### Extension Functions

| [filterNotNull](../filter-not-null.html) | `fun <T> `[`Try`](../-try/index.html)`<`[`T`](../filter-not-null.html#T)`?>.filterNotNull(): `[`Try`](../-try/index.html)`<`[`T`](../filter-not-null.html#T)`>`<br>Returns the same [Success](../-success/index.html) if its value is not `null`. Otherwise returns a [Failure](./index.html). |
| [getOrElse](../get-or-else.html) | `fun <T> `[`Try`](../-try/index.html)`<`[`T`](../get-or-else.html#T)`>.getOrElse(default: () -> `[`T`](../get-or-else.html#T)`): `[`T`](../get-or-else.html#T)<br>Gets the value of a [Success](../-success/index.html) or [default](../get-or-else.html#it.czerwinski.kotlin.util$getOrElse(it.czerwinski.kotlin.util.Try((it.czerwinski.kotlin.util.getOrElse.T)), kotlin.Function0((it.czerwinski.kotlin.util.getOrElse.T)))/default) value if this is a [Failure](./index.html). |
| [orElse](../or-else.html) | `fun <T> `[`Try`](../-try/index.html)`<`[`T`](../or-else.html#T)`>.orElse(default: () -> `[`Try`](../-try/index.html)`<`[`T`](../or-else.html#T)`>): `[`Try`](../-try/index.html)`<`[`T`](../or-else.html#T)`>`<br>Returns this [Try](../-try/index.html) if this is a [Success](../-success/index.html) or [default](../or-else.html#it.czerwinski.kotlin.util$orElse(it.czerwinski.kotlin.util.Try((it.czerwinski.kotlin.util.orElse.T)), kotlin.Function0((it.czerwinski.kotlin.util.Try((it.czerwinski.kotlin.util.orElse.T)))))/default) if this is a [Failure](./index.html). |
| [recover](../recover.html) | `fun <T> `[`Try`](../-try/index.html)`<`[`T`](../recover.html#T)`>.recover(rescue: (`[`Throwable`](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-throwable/index.html)`) -> `[`T`](../recover.html#T)`): `[`Try`](../-try/index.html)`<`[`T`](../recover.html#T)`>`<br>Returns this [Try](../-try/index.html) if this is a [Success](../-success/index.html) or a [Try](../-try/index.html) created for the [rescue](../recover.html#it.czerwinski.kotlin.util$recover(it.czerwinski.kotlin.util.Try((it.czerwinski.kotlin.util.recover.T)), kotlin.Function1((kotlin.Throwable, it.czerwinski.kotlin.util.recover.T)))/rescue) operation if this is a [Failure](./index.html). |
| [recoverWith](../recover-with.html) | `fun <T> `[`Try`](../-try/index.html)`<`[`T`](../recover-with.html#T)`>.recoverWith(rescue: (`[`Throwable`](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-throwable/index.html)`) -> `[`Try`](../-try/index.html)`<`[`T`](../recover-with.html#T)`>): `[`Try`](../-try/index.html)`<`[`T`](../recover-with.html#T)`>`<br>Returns this [Try](../-try/index.html) if this is a [Success](../-success/index.html) or a [Try](../-try/index.html) created by the [rescue](../recover-with.html#it.czerwinski.kotlin.util$recoverWith(it.czerwinski.kotlin.util.Try((it.czerwinski.kotlin.util.recoverWith.T)), kotlin.Function1((kotlin.Throwable, it.czerwinski.kotlin.util.Try((it.czerwinski.kotlin.util.recoverWith.T)))))/rescue) function if this is a [Failure](./index.html). |

